<resources>
    <string-array name="tipos_suelo">
        <item>arenoso</item>
        <item>arcilloso</item>
        <item>franco</item>
        <item>limoso</item>

    </string-array>
    <string name="app_name">Huerting</string>
    <string name="detalle_planta">Detalle de planta</string>
    <string name="necesidades_caracteristicas">🌱 Necesidades y Características</string>
    <string name="incompatibilidades">⚠️ Incompatibilidades</string>
    <string name="plagas_enfermedades">🐛 Plagas y Enfermedades Comunes</string>
    <string name="detalle_amenaza">Detalle de amenaza</string>
    <string name="sintomas">🔍 Síntomas</string>
    <string name="tratamiento">💊 Tratamiento</string>
    <string name="descripcion_huerto">📋 Descripción del huerto</string>
    <string name="mis_plantaciones">🌿 Mis plantaciones</string>
    <string name="sin_plantaciones">Aún no tienes plantaciones</string>
    <string name="instrucciones_agregar_planta">Pulsa el botón + para añadir tu primera planta</string>
    <string name="volver">Volver</string>
    <string name="imagen_planta">Imagen de la planta</string>
    <string name="imagen_amenaza">Imagen de la amenaza</string>
    <string name="imagen_huerto">Imagen del huerto</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>